@@ -83,7 +83,7 @@ public UnreliableTransport(String prefix)
 //---------------------------------------------------------------------
 
 /**
-* Retuns <code>this</code>. This way only one instance exists in the system
+* Returns <code>this</code>. This way only one instance exists in the system
 * that is linked from all the nodes. This is because this protocol has no
 * state that depends on the hosting node.
  */
